# Claude_dev_20260409

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: scrape.yml
docs/: discounts.json  index.html
scripts/: scrape_and_save.py
src/taiwan_discounts/: main.py
src/taiwan_discounts/aggregator/: engine.py
src/taiwan_discounts/api/: routes.py
src/taiwan_discounts/api/static/: index.html
src/taiwan_discounts/models/: discount.py
src/taiwan_discounts/notifiers/: line_notify.py  telegram.py
src/taiwan_discounts/scrapers/: base.py  hami.py  ipass.py  linepay.py
